--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "pppos_client_main.c"
+idf_component_register(SRCS "pppos_server_main.c"
                     INCLUDE_DIRS ".")
