work porting to esp v5.0.1

--- a/components/cmd_iperf/CMakeLists.txt
+++ b/components/cmd_iperf/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "cmd_iperf.c"
                     INCLUDE_DIRS .
-                    REQUIRES console spi_flash iperf)
+                    REQUIRES console spi_flash iperf esp_timer)
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
