--- a/components/iperf/CMakeLists.txt
+++ b/components/iperf/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "iperf.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES lwip)
+                    REQUIRES lwip esp_timer esp_netif)
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
