--- a/components/cmd_ping/CMakeLists.txt
+++ b/components/cmd_ping/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "cmd_ping.c"
                     INCLUDE_DIRS .
-                    REQUIRES console spi_flash)
+                    REQUIRES console spi_flash esp_event)
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
