--- a/components/cmd_system/CMakeLists.txt
+++ b/components/cmd_system/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "cmd_system.c"
                     INCLUDE_DIRS .
-                    REQUIRES console spi_flash)
+                    REQUIRES console spi_flash driver)
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
