--- a/components/cli_server/CMakeLists.txt
+++ b/components/cli_server/CMakeLists.txt
@@ -1,5 +1,6 @@
-idf_component_register(SRCS cli_server.h cli_server.c
+idf_component_register(SRCS cli_server.h cli_server.c cli_common.c
                     INCLUDE_DIRS .
+                    REQUIRES console
                   )
 target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
 
